welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:10: error: not found: value max
    if (nums(i) > max){
                  ^extrema:11: error: not found: value max
      max = nums(i);
      ^extrema:13: error: not found: value min
    if ( nums(i) < min ){
                   ^extrema:14: error: not found: value min
      min = nums(i);
      ^extrema:17: error: not found: value max
  return max - min;
         ^extrema:17: error: not found: value min
  return max - min;
               ^